--- a/Index.html
+++ b/Index.html
@@ -1,49 +1,53 @@
-<head>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-
-<header>GALILEUFLIX</header>
-
-
-<h1>Jesus Revolution</h1>
-<p>#Jesus-Revolution</p>
-
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/8vmHFvnjPDw?si=UmoSI315j1ijkMv3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
-
-</body>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Galileuflix</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>GALILEUFLIX</title>
 </head>
 
 <body>
-
     <header>GALILEUFLIX</header>
 
-    <section>
-        <div>
+    <section class="chamada">
+        <div class="chamada-texto">
             <h1>JESUS REVOLUTION</h1>
-            <p>#Jesus-Revolution</p>
+            <p>#jesus revolution Jesus Revolution captura a essência vibrante e inspiradora de um movimento espiritual que varreu os Estados Unidos na década de 1970. Este filme não apenas documenta eventos históricos, mas também explora como a fé cristã pode catalisar mudanças culturais profundas e duradouras.</p>
         </div>
-
 
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/8vmHFvnjPDw?si=UmoSI315j1ijkMv3"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+    </section>
+
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
 
 </body>
-</section>
-
 
 </html>
